--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,11 @@ body {
   background-color: var(--white);
 }
 
+img {
+  min-height: 5rem;
+  min-width: 5rem;
+}
+
 .container {
   max-width: 1000px;
 }
@@ -41,6 +46,26 @@ body {
 
 #forecast {
   border: 1px solid black;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 1rem;
+}
+
+.forecast-day {
+  text-align: center;
+  background-color: lightgoldenrodyellow;
+  width: 100%;
+  margin-bottom: 1rem;
+  padding: 1rem;
+}
+
+@media only screen and (min-width: 900px) {
+  #forecast {
+    border: 1px solid black;
+    display: grid;
+    padding: 1rem;
+    gap: 1rem;
+    grid-template-columns: repeat(8, 1fr);
+  }
 }
