--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,23 @@
 :root {
   --white: #FFFFFF;
+  --bg1: #FEF6EC;
+  --bg2: #E9E2D9;
+  --card: #EBDCCB;
+  --highlight: #CB9558;
+  --dark: #49341D;
+  --contrast: #538D7B;
+  --contrast-dark: #355A4E;
+  font-family: 'Playfair', serif;
 }
 
 body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--white);
+  background-color: var(--bg1);
+  opacity: 0.8;
+  background-image: repeating-radial-gradient( circle at 0 0, transparent 0, var(--bg1) 10px ), repeating-linear-gradient( #e9e2d955, var(--bg2) );
+  color: var(--dark)
 }
 
 img {
@@ -14,58 +25,144 @@ img {
   min-width: 5rem;
 }
 
+input {
+  height: 2.4rem;
+  margin: 0.5rem;
+  border: 1px solid var(--dark);
+  color: var(--dark);
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  border-radius: 0.5rem;
+  transition: 200ms ease;
+}
+
+input:focus, input:active {
+  border: 1px solid var(--highlight);
+  outline: none;
+}
+
+button {
+  background-color: var(--contrast);
+  border: none;
+  padding: 0.8rem;
+  font-size: 1rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  color: var(--white);
+  font-family: 'Playfair', serif;
+  font-weight: 700;
+}
+
+button:hover {
+  background-color: var(--contrast-dark);
+  transition: 200ms ease;
+}
+
 .container {
   max-width: 1000px;
 }
 
 #header {
-  border: 1px solid black;
   text-align: center;
   padding: 1rem;
+  background-color: var(--card);
+  border-radius: 1rem;
+  margin: 1rem;
 }
 
 #search {
-  border: 1px solid black;
+  margin: 1rem;
+  background-color: var(--card);
+  border-radius: 1rem;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.first-choice-city-text {
+  font-size: 1.1rem;
+  font-weight: 700;
+}
+
+.alt-suggestion {
+  margin-bottom: 1.5rem;
+}
+
+.alt-suggestion p {
+  margin: 0;
+}
+
+.city-option {
+  color: var(--contrast);
+  font-weight: 700;
+  font-size: 1.1rem;
+  cursor: pointer;
+  margin: 0.5rem;
+}
+
+.city-option p {
+  margin: 0;
+}
+
 #current {
-  border: 1px solid black;
+  margin: 1rem;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--card);
+  border-radius: 1rem;
 }
 
 .current-condition {
   text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 #forecast {
-  border: 1px solid black;
+  margin: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1rem;
 }
 
 .forecast-day {
   text-align: center;
-  background-color: lightgoldenrodyellow;
-  width: 100%;
-  margin-bottom: 1rem;
+  background-color: var(--card);
+  border-radius: 1rem;
+  width: calc(100% - 2rem);
+  margin: 1rem;
   padding: 1rem;
+  min-height: 280px;
 }
+
+.forecast-day-date {
+  font-weight: 700;
+  font-size: 1.1rem;
+}
+
+.forecast-day-condition {
+  font-size: 1.5rem;
+}
+
+.forecast-day-condition:nth-of-type(3) {
+margin-bottom: 1rem;
+}
+
 
 @media only screen and (min-width: 900px) {
   #forecast {
-    border: 1px solid black;
     display: grid;
-    padding: 1rem;
     gap: 1rem;
     grid-template-columns: repeat(8, 1fr);
+    overflow: auto;
+    white-space: nowrap;
+  }
+
+  .forecast-day {
+    width: 260px;
+    margin: 0;
   }
 }
